# Text2McBook

./: booktext.txt  hm.txt  pyproject.toml  subject = 1.py  text.txt  w.py  waysToDie.txt
