[tool.poetry]
name = "text2mcbook"
version = "0.1.0"
description = ""
authors = ["theplatecrafter <theplatecrater@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
